spade-tests/src/snapshots/spade_tests__ast_lowering__match_expressions_open_new_scopes.snap
---
source: spade-tests/src/ast_lowering.rs
expression: "std::str::from_utf8(buffer.as_slice()).expect(\"error contains invalid utf-8\")"
---
error: Use of undeclared name a
  ┌─ testinput:6:5
  │
6 │     a
  │     ^ Undeclared name


